--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,8 @@
             <select name="goos">
                 <option>linux
                 <option>darwin
+                <option>appengine
+                <option>appenginevm
                 <option>android
                 <option>dragonfly
                 <option>freebsd
